--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
     <title>Frontend Mentor | Profile card component</title>
   </head>
   <body>
-    <div id="profile-card">
-      <img src="images/image-victor.jpg" alt="" id="display-pic" />
-
-      <div id="display-name">
-        Victor Crest <span>26 London</span>
-        <hr />
-        <div id="profile-stats">80K Followers 803K Likes 1.4K Photos</div>
+    <div class="profile-card">
+      <div class="card-header">
+        <div class="display-pic">
+          <img src="images/image-victor.jpg" alt="" class="pic" />
+        </div>
+        <div class="name"><span>Victor Crest</span> 26</div>
+        <div class="from">London</div>
+      </div>
+      <div class="card-footer">
+        <div class="stats">
+          <div class="stat-item"><span class="number">80K</span> Followers</div>
+          <div class="stat-item"><span class="number">803K</span> Likes</div>
+          <div class="stat-item"><span class="number">1.4K</span> Photos</div>
+        </div>
       </div>
     </div>
     <div class="attribution">
